# rac-deb

./: Cargo.toml  rac_0.0~git20231120.ddeb836.orig.tar.gz.delta  rac_0.0~git20231120.ddeb836.orig.tar.gz.id  rac_0.1.0+git20240702.4a682e1.orig.tar.xz.delta  rac_0.1.0+git20240702.4a682e1.orig.tar.xz.id
.github/workflows/: deb-builder.yml
debian/: README.Debian  changelog  client.toml  control  copyright  gbp.conf  rules  toradex-ci.yml  watch
debian/patches/: add-packaging-info-to-Cargo.toml.patch  change-default-toolchain-to-gnu.patch  disable-running-the-build-script.patch  remove-cargo-config.patch  series
debian/source/: options
debian/upstream/: metadata
