[package]
name = "rac"
version = "0.1.0"
edition = "2021"
build = "build.rs"
homepage = "https://github.com/toradex/torizon-rac"
description = "Remote access client for Torizon"
repository = "git://github.com/toradex/torizon-rac.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls-manual-roots", "rustls-tls"] }
russh = "0.45.0"
russh-keys = "0.45.0"
serde = { version = "1.0.207", features = ["std", "derive"] }
ssh-key = { version = "0.6.6", features = ["serde", "ed25519"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io-util"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
color-eyre = { version = "0.6", default-features = false }
url = { version = "2.5.2", features = ["serde"] }
chrono = "0.4.38"
portable-pty = "0.8.1"
socket2 = "0.5.7"
eyre = "0.6.12"
futures = { version = "0.3.30", default-features = false, features = ["std", "alloc"] }
nix = { version = "0.29.0", default-features = false, features = ["user", "fs"] }
tough = { git = "https://github.com/toradex/tough", branch = "rac", features = ["http", "reqwest"] }
base64 = "0.22.1"
serde_json = "1.0.125"
bytes = "1.7.1"

[build-dependencies]
vergen = "9.0.0"

[dev-dependencies]
console = "0.15.8"
axum = "0.7.5"
http = "1.1.0"
pretty_assertions = "1"
serde_json = "1.0.125"
tempfile = "3.12.0"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking"] }
tokio-retry = "0.3.0"
ring = { version = "0.17", features = ["std"] }
olpc-cjson = "0.1.3"
